neon-theme.css
/* ... */
:root {
    --background: #2d2742;
    --light-background: rgb(41, 33, 70);
    --lighter-background: rgba(180, 216, 254, 0.5);
    --link-text-color: rgba(84, 193, 220, 1);
    --dark-background: #241B30;
    --darker-background: #191a21;
    --current-line: #442034;
    --comment: #6970A9;
    --white: rgb(255, 245, 245);
    --white-hover: rgba(176, 176, 176, 1);
    --red: #e6488a;
    --orange: #ffb86c;
    --yellow: rgba(249, 181, 55, 1);
    --green: #55ca72;
    --purple: rgba(126, 80, 233, 0.9);
    --purple-hover: rgba(111, 78, 188, 0.5);
    --gutter: rgba(103, 51, 138, 0.5);
    --purple-dark: #1f172c;
    --cyan: #51dfff;
    --cyan-hover: #8be9fd80;
    --blue: rgba(84, 193, 220, 1);
    --checkbox-blue: rgba(38, 67, 104, 1);
    --checkbox-border-blue: rgba(38, 67, 104, 1);
    --checkbox-check: rgba(246, 247, 238, 1);
    --highlight-blue: rgb(29, 104, 202);
    --pink: #ff8ccd;
    --pink-glow: #df0977;
    --bracket-color: #8be9fd;
    --orchid: #DA70D6;

    --ls-tag-text-opacity: 0.8;
    --ls-tag-text-hover-opacity: 0.8;
    --ls-page-text-size: 16px;
    --ls-page-title-size: 36px;
    --ls-font-family: "Only Emoji", "Fira Sans", sans-serif;
    --ls-font-weight: 400;
    --ls-font-letter-spacing: 0.002em;
    --ls-font-line-height: 1.4;

    --ls-border-radius-low: 4px;
    --ls-border-radius-medium: 8px;

    /* Accent Colors for Neon Glows */
    --gradientDegree: 130deg;
    --accent-1: #FF00FF;
    --accent-2: #00FFFF;
    --accent-3: #00FF00;
    --accent-4: #FFFF00;
    --accent-5: #FF0000;
    --accent-6: #0000FF;

    --accent-1-muted: #ff79c6;
    --accent-2-muted: #8be9fd;
    --accent-3-muted: #50fa7b;
    --accent-4-muted: #ffb86c;
    --accent-5-muted: #ff5555;
    --accent-6-muted: #bd93f9;
    --indent-px: 1px;
    --icon-external-link: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><g style="stroke:orchid;stroke-width:1"><line x1="5" y1="5" x2="5" y2="14" /><line x1="14" y1="9" x2="14" y2="14" /><line x1="5" y1="14" x2="14" y2="14" /><line x1="5" y1="5" x2="9" y2="5"  /><line x1="10" y1="2" x2="17" y2="2"  /><line x1="17" y1="2" x2="17" y2="9" /><line x1="10" y1="9" x2="17" y2="2" style="stroke-width:1.5" /></g></svg>');
}

.dark-theme,
html[data-theme="dark"] {
    --ls-primary-background-color: var(--background);
    --ls-secondary-background-color: var(--dark-background);
    --ls-tertiary-background-color: var(--lighter-background);
    --ls-quaternary-background-color: var(--dark-background);
    --ls-quinary-background-color: var(--darker-background);

    --ls-active-primary-color: var(--white);
    --ls-active-secondary-color: var(--white);

    --ls-primary-text-color: var(--white);
    --ls-secondary-text-color: var(--white-hover);

    --ls-search-background-color: var(--background);
    --ls-border-color: var(--comment);
    --ls-secondary-border-color: var(--ls-border-color);
    --ls-menu-hover-color: var(--light-background);
    --ls-table-tr-even-background-color: var(--light-background);

    --ls-head-text-color: var(--white);
    --ls-title-text-color: var(--white);

    --ls-link-text-color: var(--pink);
    --ls-link-text-hover-color: var(--white-hover);

    --ls-link-ref-text-color: var(--blue);
    --ls-link-ref-text-hover-color: var(--white-hover);
    --ls-block-ref-link-text-color: var(--ls-border-color);

    --ls-tag-text-color: var(--white);
    --ls-tag-text-hover-color: var(--white-hover);

    --ls-block-bullet-border-color: var(--current-line);
    --ls-block-bullet-color: var(--pink);
    --ls-block-bullet-threading-width: 2px;
    --ls-block-highlight-color: var(--current-line);
    --ls-block-properties-background-color: var(--light-background);

    --ls-page-checkbox-color: var(--checkbox-blue);
    --ls-page-checkbox-border-color: var(--checkbox-border-blue);

    --ls-page-blockquote-color: var(--white);
    --ls-page-blockquote-bg-color: var(--light-background);
    --ls-page-blockquote-border-color: var(--yellow);
    --ls-page-properties-background-color: var(--light-background);

    --ls-page-inline-code-color: var(--orange);
    --ls-page-inline-code-bg-color: var(--purple-dark);

    --ls-scrollbar-background-color: var(--current-line);
    --ls-scrollbar-foreground-color: var(--accent-6-muted);
    --ls-scrollbar-thumb-hover-color: var(--accent-5-muted);

    --ls-icon-color: var(--blue);
    --ls-search-icon-color: var(--white-hover);
    --ls-a-chosen-bg: var(--light-background);
    --ls-right-sidebar-code-bg-color: var(--light-background);
    --ls-selection-background-color: var(--comment);
    --ls-slide-background-color: var(--ls-primary-background-color);
    --ls-guideline-color: var(--ls-border-color);

}

html,
body {
    font-weight: var(--ls-font-weight);
    letter-spacing: var(--ls-font-letter-spacing);
    line-height: var(--ls-font-line-height);
    font-size: var(--ls-page-text-size);
    background-color: var(--ls-primary-background-color);
}
i {
    font-weight: italic;
}

b {
    font-weight: bold;
}

mark {
    background-color: var(--highlight-blue);
    color: var(--white);
}

.bg-orange-400 {
    background-color: var(--orange);
}

.bg-green-600 {
    background-color: var(--green);
}

.bg-red-500 {
    background-color: var(--red);
}

.dark-theme .form-checkbox {
    border: 1px solid var(--ls-page-checkbox-border-color) !important;
    border-radius: var(--ls-border-radius-low) !important;
}


.external-link {
    color: var(--orchid);
    text-decoration: none;
    border-bottom: none;
}

.external-link::after {
    content: '';
    background: no-repeat var(--icon-external-link);
    padding-right: 1em;
}

.timestamp-label+a:hover,
.external-link:hover,
.marker-switch:hover,
.block-ref:hover,
.page-ref:hover {
    color: var(--white-hover);
}

h1,
h2,
h3,
h4 {
    color: transparent;
    -webkit-text-fill-color: transparent;
    background-clip: text;
    -webkit-background-clip: text;
    font-family: "PT Sans Narrow", sans-serif;
}
/* ... */

